@@ -1,3 +1,9 @@
+2002-10-15  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclCmdMZ.c:
+	* tests/trace.test: applied patch from Hemang Levana to fix
+	[Bug #615043] in execution traces with idle tasks firing.
+
 2002-10-14  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclEnv.c (Tcl_PutEnv): correct possible mem leak.
@@ -24,7 +30,7 @@
 	
 	* doc/regexp.n:	Typo correction.  Thanks Ronnie Brunner. [Bug 606826]
 
-2002-07-22  Vince Darley  <vincentdarley@users.sourceforge.net>
+2002-10-10  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* unix/tclLoadAout.c
 	* unix/tclLoadDl.c
